assets/style.css
:root {
  --background: #fff;
  --background-light: #e6e7e8;
  --foreground: #000;
  --link: blue;
  --filter: invert(0);
}

/* @media (prefers-color-scheme: dark) {
  :root {
    --background: #1d1d1d;
    --background-light: #171717;
    --foreground: #fff;
    --link: aquamarine;
    --filter: invert(1);
  }
} */

body {
  font-family: "Inter", monospace;
  background: var(--background);
  color: var(--foreground);
}
h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: "Space Mono", serif;
  padding-top: 0.5em;
  font-weight: 400;
  text-decoration: underline;
}

header {
  display: grid;
  background: var(--background-light);
  margin: 2em;
  grid-template-columns: repeat(2, 1fr);
}
header img {
  width: 40vw;
  height: 40vw;
  margin: -1em auto;
  max-height: 25em;
  max-width: 25em;
}

ol {
  list-style: none;
  padding: 0;
}

.past-events li {
  font-size: 2.5rem;
  margin: 0.5em;
}

ol li:before {
  content: "– ";
}

.⏹ {
  display: flex;
  align-items: center;
  justify-content: center;
}

.⭐️ {
  text-transform: uppercase;
  display: inline-flex;
  flex-direction: column;
  text-align: center;
  font-size: 2rem;
  color: var(--link);
  border-color: var(--link);
  overflow: hidden;
  text-decoration: none;
  margin: 2em;
}
.⭐️ .🏘 {
  animation: 7s infinite alternate slidein;
}
.⭐️ .💥 {
  padding-top: 1em;
  border-left: 3px solid;
  border-right: 3px solid;
}
.⭐️ .💥 > * {
  display: block;
  animation: 8s infinite slidein;
}
@keyframes slidein {
  0% {
    transform: translateX(-100%) rotate(-2deg);
  }
  5% {
    transform: translateX(0%);
  }
  84% {
    transform: translateX(0%);
  }
  95% {
    transform: translateX(100%) rotate(2deg);
  }
  100% {
    transform: translateX(100%) rotate(2deg);
  }
}

/* Global nav */
.🗺 {
  max-width: 42em;
  margin: 3em auto;
  display: flex;
  flex-wrap: wrap;
  font-family: "Space Mono", serif;
}
.🗺 a {
  margin-right: 1em;
  margin-bottom: 1em;
  color: var(--link);
  background: var(--background-light);
  padding: 0.5em;
}
.🗺 a:hover,
.🗺 a.current {
  color: var(--background-light);
  background: var(--link);
}

.📅 .⏰,
.📅 .☹️ {
  font-size: 3em;
  display: block;
  font-weight: inherit;
}
.📅 .⏰ > span {
  display: block;
  font-size: 0.5em;
}

.📅 {
  display: flex;
  justify-content: space-between;
}

/* /join */
.✅ summary {
  color: var(--link);
  cursor: pointer;
  font-size: 1.5em;
  font-family: "Space Mono", serif;
}
.✅ summary:hover {
  background: var(--background-light);
  text-decoration: underline;
}
.✅ > p {
  font-size: 1.5em;
}
.✅ .🎉 {
  font-size: 4em;
  padding: 0.5em;
}

main {
  max-width: 42em;
  margin: auto;
}

img {
  max-width: 100%;
}

.lead {
  display: block;
  margin: 0;
  font-size: 1.5rem;
  font-family: "Space Mono", serif;
}

.🐙 {
  text-align: right;
  margin: 1em;
}
.🐙 img {
  height: 2em;
  width: 2em;
  transition: transform 0.4s;
  padding: 1em;
}
.🐙 img:hover {
  transform: scale(1.4) rotate(8deg);
}

a {
  color: var(--link);
}

.🎩 {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  list-style: none;
  gap: 0.5em;
  font-family: "Space Mono", serif;
  padding: 0;
}
.🎩 li {
  display: flex;
  align-items: center;
  background: var(--background-light);
}
.🎩 li span {
  flex: 1;
  margin: 0 0.5em;
}
.🎩 img {
  height: 2em;
  width: 2em;
  display: inline-block;
  margin: 0;
}
.🎩 a {
  line-height: 0;
}

.📣 img {
  height: 3em;
  width: 3em;
  margin: 0;
  margin-right: 0.5em;
  transition: transform 0.2s;
}

.gh {
  filter: var(--filter);
}

.📣:hover img {
  transform: scale(1.4) rotate(4deg);
}

.sr-only {
  display: none;
}

.💞 {
  font-size: 1.5em;
  display: block;
  background: var(--background-light);
  color: var(--link);
  padding: 0.5em;
  font-family: "Space Mono", serif;
}
.💞:hover {
  background: var(--link);
  color: var(--background-light);
}

.🔗 {
  border-top: 2px solid #e6e7e8;
  padding-top: 1em;
  margin-top: 3em;
  padding: 0;
  font-family: "Space Mono", serif;
}
.🔗 li {
  list-style: none;
  margin: 1em 0;
}

@media (max-width: 520px) {
  .🎩 {
    display: grid;
    grid-template-columns: repeat(1, 1fr);
  }

  header {
    display: block;
    margin: 0;

    background-image: url("/images/pi-fade-small.jpg");
    background-size: cover;
    background-position: 50% 10%;
  }
  header img {
    display: none;
  }
}

.unconf {
  background-image: repeating-linear-gradient(288deg, #ffeb3b, #ffc10738 100px);
  background-attachment: fixed;
}
.unconf h1{
  color: #f08;
  font-size: min(12vw, 4em);  
  font-weight: 800;
  text-decoration: none;
  line-height: 1em;
  padding: 0;
}
.unconf a {
  color: #f08;
  background: #fff;
}
.unconf .🗺 {
  margin: 0 auto;
}


.unconf-cta {
  background-image: repeating-linear-gradient(288deg, #ffeb3b, #ffc10738 50px);
  background-attachment: fixed;
  display: block;
  font-size: 1.5em;
  padding: .5em;
  border-radius: 9px;
  font-family: "Space Mono", serif;
  font-size: 3rem;
  color: #f08;
  text-decoration: none;
  line-height: 1;
}
.unconf-cta:hover{
  background-image: repeating-linear-gradient(288deg, #3bf516, #6eff0738 50px);
}
.unconf-cta span {
  display: block;
  font-size: 1rem;
  margin: 0;
  color: #000
}
.unconf-cta .⏰ {
  font-size: 2rem;
  color: #000;
}

